--- a/src/GE/Views/Shared/_Layout.cshtml
+++ b/src/GE/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap -->
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/css/app.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,7 +24,9 @@
 </head>
 <body>
     <div id="wrapper">
-        @RenderBody()
+        <div class="container">
+            @RenderBody()
+        </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
