--- a/src/GE/Views/Shared/_Layout.cshtml
+++ b/src/GE/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
 </head>
 <body>
     <div id="wrapper">
+        @Component.Invoke("SiteMenu")
         <div class="container">
             @RenderBody()
         </div>
