--- a/src/GE/Views/Shared/_Layout.cshtml
+++ b/src/GE/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
 <body>
     <div id="wrapper">
         @Component.Invoke("SiteMenu")
+        @Component.Invoke("GameMenu")
         <div class="container">
             @RenderBody()
         </div>
