--- a/src/GE/wwwroot/less/bootstrap-reset.less
+++ b/src/GE/wwwroot/less/bootstrap-reset.less
@@ -1,5 +1,20 @@
-﻿h1, h2, h3, h4, h5, h6 {
+﻿.reset-pad{
     margin: 0;
     padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    .reset-pad;
     font-size:1em;
+}
+
+ul{
+    list-style:none;
+    .reset-pad;
+}
+
+
+/*.navbar*/
+.navbar{
+    margin-bottom:0;
 }
