--- a/src/GE/wwwroot/less/fonts.less
+++ b/src/GE/wwwroot/less/fonts.less
@@ -1,4 +1,8 @@
 ﻿@font-face {
-    font-family: Open Sans Condensed Light;
-    src: url(../../lib/webfont-opensans/fonts/opensans-light-webfont.eot);
+    font-family: 'Open Sans Condensed';
+    src: url('../fonts/OpenSans-CondLight.ttf');
+    src: url('../fonts/OpenSans-CondLight.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/OpenSans-CondLight.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
