--- a/src/GE/wwwroot/less/app.less
+++ b/src/GE/wwwroot/less/app.less
@@ -1,7 +1,7 @@
 ﻿@import (reference) "colors.less";
 
 body {
-    font-family: 'Open Sans Condensed Light', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
     color: @color-font;
     background-color:@colog-bg;
 }
