--- a/GE.WebAdmin/Content/less/bootstrap-ext.less
+++ b/GE.WebAdmin/Content/less/bootstrap-ext.less
@@ -1,3 +1,10 @@
-﻿a:focus{
-    outline:none;
+﻿a:focus {
+    outline: none;
+}
+
+
+/*table*/
+.table-bordered > thead > tr > td, .table-bordered > thead > tr > th {
+    border-bottom-width:1px;
+    font-weight:normal;
 }
