--- a/GE.WebAdmin/Views/Articles/Index.cshtml
+++ b/GE.WebAdmin/Views/Articles/Index.cshtml
@@ -1,10 +1,16 @@
-﻿@model IEnumerable<Article>
+﻿@model VMArticle[]
 @{
     ViewBag.Title = "Index";
 }
 
-@foreach(var model in Model)
-{
-    @Html.DisplayFor(x=>model)
-}
-
+@Html.SxGridView(
+    Model,
+    new SX.WebCore.HtmlHelpers.Extantions.SxGridViewSettings
+    {
+        Columns = new string[] { "Id", "DateCreate", "Title", "Html" },
+        ShowRowMenu = true,
+        EnableSorting=true,
+        EnableEditing=true
+    },
+        new { @class = "table table-condensed table-bordered table-responsive table-striped" }
+    )
