--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -8,10 +8,11 @@
     <title>@Constants.AppName</title>
 
     <!-- Bootstrap -->
-    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/Content/css/metisMenu.min.css" rel="stylesheet">
-    <link href="~/Content/css/font-awesome.min.css" rel="stylesheet">
-    <link href="~/Content/css/site.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/metisMenu.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/font-awesome.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/sx.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -373,9 +374,10 @@
             </div>
         </div>
     </footer>
-    <script src="~/Content/js/jquery.min.js"></script>
-    <script src="~/Content/js/bootstrap.min.js"></script>
-    <script src="~/Content/js/metisMenu.min.js"></script>
+    <script src="~/Content/dist/js/jquery.min.js"></script>
+    <script src="~/Content/dist/js/bootstrap.min.js"></script>
+    <script src="~/Content/dist/js/metisMenu.min.js"></script>
+    @RenderSection("scripts", false)
     <script type="text/javascript">
         $(function () {
 
