grid view pager

--- a/GE.WebAdmin/Content/sx/less/sx-pager.less
+++ b/GE.WebAdmin/Content/sx/less/sx-pager.less
@@ -20,3 +20,12 @@
     display:block;
     padding:0 10px;
 }
+
+.sx-pager-progress{
+    padding:0 !important;
+}
+
+.sx-pager-progress > div{
+    background-color:@color-blue;
+    height:2px;
+}
