--- a/GE.WebAdmin/Content/sx/less/sx-grid-view.less
+++ b/GE.WebAdmin/Content/sx/less/sx-grid-view.less
@@ -10,7 +10,7 @@
 }
 
 .sx-grid-view .ordered-column:active {
-    background-color: @color-gray;
+    background-color: @color-blue;
     -moz-user-select: none;
     -ms-user-select: none;
     -webkit-user-select: none;
@@ -26,4 +26,8 @@
     border: 1px solid @color-gray;
     padding: 2px 2px 2px 10px;
     width:100%;
+}
+
+.sx-grid-view .sx-add-column{
+    width:40px;
 }
