--- a/GE.WebAdmin/Views/ArticleTypes/Index.cshtml
+++ b/GE.WebAdmin/Views/ArticleTypes/Index.cshtml
@@ -1,11 +1,13 @@
-﻿@model VMArticle[]
+﻿@model VMArticleType[]
 
 @section styles{
     <link href="~/Content/dist/css/sx.min.css" rel="stylesheet">
 }
 
-<div id="grid-articles">
-    @Html.Partial(MVC.Articles.Views._GridView, Model)
+<h2>Типы статей</h2>
+
+<div id="grid-article-types">
+    @Html.Partial(MVC.ArticleTypes.Views._GridView, Model)
 </div>
 
 @section scripts{
