--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -12,7 +12,6 @@
     <link href="~/Content/dist/css/metisMenu.min.css" rel="stylesheet">
     <link href="~/Content/dist/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
-    <link href="~/Content/dist/css/sx.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,6 +19,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    @RenderSection("styles", false)
 </head>
 <body>
     <div id="wrapper">
@@ -268,13 +269,16 @@
                             <a href="index.html"><i class="fa fa-home fa-fw"></i> Главная</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-file-text-o fa-fw"></i> Материалы<span class="fa arrow"></span></a>
+                            <a href="@Url.Action(MVC.Games.Index())"><i class="fa fa-fighter-jet fa-fw"></i> Игры</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-file-text-o fa-fw"></i> Статьи<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="@Url.Action(MVC.Articles.Index())">Статьи</a>
+                                    <a href="@Url.Action(MVC.Articles.Index())">Каталог статей</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Новости</a>
+                                    <a href="@Url.Action(MVC.ArticleTypes.Index())">Типы статей</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
