--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -269,6 +269,15 @@
                             <a href="index.html"><i class="fa fa-home fa-fw"></i> Главная</a>
                         </li>
                         <li>
+                            <a href="#"><i class="fa fa-camera-retro fa-fw"></i> Мультимедиа<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="@Url.Action(MVC.Pictures.Index())">Фото-контент</a>
+                                </li>
+                            </ul>
+                            <!-- /.nav-second-level -->
+                        </li>
+                        <li>
                             <a href="@Url.Action(MVC.Games.Index())"><i class="fa fa-fighter-jet fa-fw"></i> Игры</a>
                         </li>
                         <li>
