--- a/GE.WebAdmin/Views/Articles/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Articles/_GridView.cshtml
@@ -1,7 +1,7 @@
 ﻿@model VMArticle[]
 @{
     Layout = null;
-    var filter = ViewBag.Filter != null ? (ISxViewModel)ViewBag.Filter : null;
+    var filter = ViewBag.Filter != null ? (VMArticle)ViewBag.Filter : null;
     var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
 }
 
