--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -1,14 +1,6 @@
 ﻿@import (reference) "colors.less";
 
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('/fonts/OpenSans-CondLight-webfont.eot');
-    src: url('/fonts/OpenSans-CondLight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/OpenSans-CondLight-webfont.woff') format('woff'),
-         url('O/fonts/OpenSans-CondLight-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic);
 
 body {
     font-family:'Open Sans Condensed';
