--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -8,8 +8,9 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
-    <link href="~/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/Content/css/site.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/font-awesome.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,14 +21,15 @@
 </head>
 <body>
     <div class="wrapper">
+        @Html.Partial(MVC.Shared.Views._NavBar)
         <div class="container">
             @RenderBody()
         </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="~/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="~/Content/dist/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="~/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/Content/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
