--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>@Constants.AppName</title>
+    <title>@(!string.IsNullOrEmpty(ViewBag.Title) ? ViewBag.Title + " | " + Constants.AppName : Constants.AppName)</title>
 
     <!-- Bootstrap -->
     <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
