--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
 <body>
     <div class="wrapper">
         @Html.Partial(MVC.Shared.Views._NavBar)
+        @Html.Action(MVC.Games.GameList())
         <div class="container">
             @RenderBody()
         </div>
