--- a/GE.WebAdmin/Views/Pictures/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Pictures/_GridView.cshtml
@@ -12,6 +12,7 @@
         UpdateTargetId = "grid-pictures",
         Data = Model,
         Columns = new SxExtantions.SxGridViewColumn[]{
+            new SxExtantions.SxGridViewColumn{FieldName="Id", Caption="Идентификатор"},
             new SxExtantions.SxGridViewColumn{FieldName="Caption", Caption="Название"},
             new SxExtantions.SxGridViewColumn{FieldName="Description", Caption="Описание"},
             new SxExtantions.SxGridViewColumn{FieldName="Width", Caption="Ширина, px"},
