--- a/GE.WebAdmin/Views/Games/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Games/_GridView.cshtml
@@ -13,6 +13,7 @@
         Data = Model,
         Columns = new SxExtantions.SxGridViewColumn[]{
             new SxExtantions.SxGridViewColumn{FieldName="TitleFull", Caption="Наименование игры"},
+            new SxExtantions.SxGridViewColumn{FieldName="TitleAbbr", Caption="Краткое наименование игры"},
             new SxExtantions.SxGridViewColumn{FieldName="Description", Caption="Описание"},
             new SxExtantions.SxGridViewColumn{FieldName="Show", Caption="Показывать"},
         },
