--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -25,10 +25,10 @@
         </div>
     </div>
 
-    <script type="text/javascript">
+    @*<script type="text/javascript">
         var e = document.getElementById('displayWidth');
         e.value = window.outerWidth;
-    </script>
+    </script>*@
     <script src="~/Content/dist/js/site.min.js"></script>
 </body>
 </html>
